--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,5 @@
-<h1>Hello World!</h1>
-<p>My name is Brando</p>
-
+<div class="jumbotron">
+  <h1>SOLID CHEETAH</h1>
+  <p>This is my (Brando's) Twitter clone application</p>
+  <%= link_to "Sign Up", "#", class: "btn btn-primary btn-lg" %>
+</div>
