--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <l1><a class="navbar-brand" href="/">Solid Cheetah</a><l1/>
+      <l1><a class="navbar-brand" href="#"><i class="fa fa-cloud"></i> Solid Cheetah</a><l1/>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
