--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="jumbotron">
-  <h1>SOLID CHEETAH</h1>
+  <h1><i class="fa fa-cloud"></i>SOLID CHEETAH</h1>
   <p>This is my (Brando's) Twitter clone application</p>
   <%= link_to "Sign Up", "#", class: "btn btn-primary btn-lg" %>
 </div>
